Bugfix throttle. Bugfix and exteded inputs event handlers. todo: add event.shift to arrowDown and arrowUp events of the number field

--- a/components/button/button.css
+++ b/components/button/button.css
@@ -24,10 +24,12 @@
 
 .btn_input_plus {
  left: 1px;
+ left: 1.9rem;
 }
 
 .btn_input_minus {
  left: 1.9rem;
+ left: 1px;
 }
 
 .btn:hover {
